Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27118

adb process not terminated on Qt Creator shutdown

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 7.0.0
    • Qt Creator 7.0.0-beta2
    • Android Support
    • None
    • Windows
    • e45e16d904 (qt-creator/qt-creator/7.0) e45e16d904 (qt-creator/qt-creator/master) 816746a06d (qt-creator/qt-creator/7.0) 816746a06d (qt-creator/qt-creator/master) 816746a06d (qt-creator/qt-creator/qds-3.3) e45e16d904 (qt-creator/qt-creator/qds-3.3)

      After closing Qt Creator the adb process stays open on my machine. And those Zombie adb instances add up over time: 

        1. image-2022-02-25-13-55-32-976.png
          197 kB
          David Schulz
        2. AdbTrackDevices.png
          110 kB
          Alessandro Portale
        For Gerrit Dashboard: QTCREATORBUG-27118
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            davschul David Schulz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: