src/plugins/android/androidplugin.cpp
@@ -160,6 +160,19 @@ bool AndroidPlugin::initialize(const QStringList &arguments, QString *errorMessa
     return true;
 }
 
+AndroidPlugin::ShutdownFlag AndroidPlugin::aboutToShutdown()
+{
+    AndroidDeviceManager *dm = AndroidDeviceManager::instance();
+    const IPlugin::ShutdownFlag sf = dm->devicesShutdownFlag();
+
+    if (sf == AsynchronousShutdown)
+        connect(dm, &AndroidDeviceManager::devicesWatcherShutdownFinished,
+                this, &ExtensionSystem::IPlugin::asynchronousShutdownFinished);
+
+    dm->shutdownDevicesWatcher();
+    return sf;
+}
+
 void AndroidPlugin::kitsRestored()
 {
     const bool qtForAndroidInstalled
