src/plugins/android/androidplugin.h
@@ -44,6 +44,9 @@ class AndroidPlugin final : public ExtensionSystem::IPlugin
 
     class AndroidPluginPrivate *d = nullptr;
 
+public:
+    ShutdownFlag aboutToShutdown() final;
+
 #ifdef WITH_TESTS
 private slots:
    void testAndroidSdkManagerProgressParser_data();
